
v1.4.2 "aequaora viridia":
 - Add a minimum system version requirement (that is, version 9.6.0)
 - Add information about the Virtual Console type in extended meta
 - Fix alphabetical sort taking the Virtual Console tag into account
 - Fix issue where changing the 3hs theme would instantly crash
 - Fix issue where updating the base game would first delete itself
 - Improve performance by using binary api data
 - Make quick search select only the console's region by default
 - General system stability improvements to enhance the user's experience

v1.4.1 "aequaora viridia":
 - Fix issue where closing the lid while in the timeout screen would pause the download
 - Fix issue where 3hs would load only the dark, light and selected theme
 - Fix issue where 3hs would freeze or crash when sleep mode was triggered
 - Make quitting the app during an install or api requests possible via the HOME menu
 - Make the progress bar omit the ETA if it is not known
 - Improve stability of the api network requests
 - General system stability improvements to enhance the user's experience

v1.4.0 "aequora viridia":
 - Fix issue where an unlisted title would crash 3hs
 - Fix issue where jumping a page in a list would skip an entry
 - Fix issue where DSiWare that was already installed would not be detected
 - Fix issue where it was possible to add duplicate titles to the queue
 - Fix regional variants of VC console names being incorrect
 - Fix battery indicator not turning red when only one bar is left
 - Make 3hs not remove every queue item if there was a failure, but only those that succeeded
 - Make 3hs always display the title currently being installed
 - Make battery indicator show whether or not a charger is plugged in
 - Add a progress bar instead of spinner for deleting unused tickets
 - Add feature to place the cursor at the subcategory that matches the system region
 - Add support for the Luma3DS v11.0 configuration format
 - Add latency graph during installation