@@ -5,6 +5,7 @@ v1.4.2 "aequaora viridia":
  - Fix alphabetical sort taking the Virtual Console tag into account
  - Fix issue where changing the 3hs theme would instantly crash
  - Fix issue where updating the base game would first delete itself
+ - Fix an immediate 3hs crash when the audio configuration file was empty
  - Improve performance by using binary api data
  - Make quick search select only the console's region by default
  - General system stability improvements to enhance the user's experience
